--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ravalli Mirella & Iosella S.n.c. | Gioielleria di Lusso</title>
-    <meta name="description" content="Ravalli Mirella & Iosella S.n.c. - Gioielleria di lusso a Comiso. Creazioni uniche che celebrano l'artigianato italiano e i momenti preziosi della vita." />
+    <title>Ravalli Mirella & Iosella S.n.c.</title>
+    <meta name="description" content="Ravalli Mirella & Iosella S.n.c. - Creazioni uniche che celebrano l'artigianato italiano e i momenti preziosi della vita." />
     <meta name="author" content="Ravalli Mirella & Iosella S.n.c." />
     <meta property="og:image" content="/og-image.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
